--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   sdmonitor:
-    build: .
+    image: nbazedong/zt-sdmonitor:latest
     ports:
       - "5000:5000"
     volumes:
